--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: minima
 
-title: Chad's Blog
+title: Zhifang's Blog
 author: Chad Baldwin
 email: blog@chadbaldwin.net
 url: https://chadbaldwin.net
